# dashmark_pure

./: .gitignore  Cargo.toml  README.md  bridge_build_wasm.sh  bridge_codegen.ps1  bridge_codegen.sh  bridge_serve_web.sh  profile.json  pubspec.yaml
.cargo/: config.toml
android/app/: build.gradle  local.properties
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/dashmark_pure/: MainActivity.kt
docs/: flags.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: aabb.dart  batch.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  buffer.dart  bvh.dart  ffi.dart  ffi_export.dart  ffi_web.dart  main.dart  matrix.dart  painter.dart  renderer.dart  world.dart
lib/api/: bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.io.dart  bridge_generated.web.dart  encoding.dart  entity.dart  rendering.dart  transform.dart  vertices.dart
lib/typed_array/: f32.dart  f64.dart  u16.dart  u64.dart
lib/typed_buffer/: complex.dart  float.dart  integer.dart  mod.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/shaders/: shader.wgsl
native/src/: aabb.rs  api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  bvh.rs  entity.rs  fast_list.rs  flat_bvh.rs  grid.rs  index.rs  lib.rs  lock.rs  main.rs  matrix.rs  render.rs  state.rs  thread.rs  time.rs  transform.rs  typed_data.rs  verlet.rs
native/src/api/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  mod.rs  shape.rs  state.rs
native/src/state/: broadphase_stack.rs  entity_manager.rs  mod.rs  rendering_resources.rs  transform_manager.rs  verlet_system.rs  vertex_manager.rs
native/src/tests/: mod.rs
native/tests/: mod.rs
scripts/: web_server.sh
shaders/: sprite.frag  sprite.glsl
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
