[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
backtrace = "0.3.67"
downcast-rs = "1.2.0"
fastrand = "1.9.0"
flutter_rust_bridge = { version = "1" }
generational-arena = { version = "0.2.8", features = ["std"] }
rapier2d-f64 = { version = "0.17.2", features = ["simd-stable", "dim2"] }
simba = { version = "0.8.0", features = ["std", "packed_simd"] }
smallvec = "1.10.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = 1
