[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
backtrace = "0.3.67"
downcast-rs = "1.2.0"
fastrand = "1.9.0"
flutter_rust_bridge = { version = "1" }
generational-arena = { version = "0.2.8", features = ["std"] }
rapier2d = { version = "0.17.2", features = ["simd-stable", "dim2"] }
simba = { version = "0.8.0", features = ["std", "packed_simd"] }
smallvec = "1.10.0"
chrono = { version = "0.4.24", features = ["wasmbind"] }
chrono-humanize = "0.2.2"
flat_spatial = "0.5.0"
rustc-hash = "1.1.0"
profiling = "1.0.7"
wasm_thread = "0.2.0"
log = "0.4.17"
env_logger = "0.10.0"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1.7"
pollster = "0.3.0"
futures = "0.3.27"
num_cpus = "1.0"
itertools = "0.10.5"
spin = "0.9.6"
web-sys = { version = "0.3.61", features = ["Window", "Location", "Navigator"] }
js-sys = { version = "0.3.61" }

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = 1
